--- a/main/site1.html
+++ b/main/site1.html
@@ -2,27 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <link rel="icon" href="../images/favicon.ico"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="" name="description"/>
+    <meta content="" name="author"/>
+    <link href="../images/favicon.ico" rel="icon"/>
 
     <title>أجا</title>
 
     <!-- Vendors Style-->
-    <link rel="stylesheet" href="css/vendors_css.css"/>
+    <link href="css/vendors_css.css" rel="stylesheet"/>
 
     <!-- Style-->
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/skin_color.css"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/skin_color.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="css/jquery-ui.css"/>
-    <!--    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css?v=1.0">-->
+    <link href="css/jquery-ui.css" rel="stylesheet"/>
 
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">-->
-    <!--    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css">-->
-    <!--    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>-->
 </head>
 <!---->
 <body class="hold-transition light-skin sidebar-mini theme-primary fixed rtl">
@@ -32,22 +28,22 @@
     <header class="main-header">
         <div class="d-flex align-items-center logo-box justify-content-start">
             <a
-                    href="#"
                     class="waves-effect waves-light nav-link rounded d-none d-md-inline-block mx-10 push-btn"
                     data-toggle="push-menu"
+                    href="#"
                     role="button"
             >
                 <i class="ti-menu"></i>
             </a>
             <!-- Logo -->
-            <a href="index.html" class="logo justify-content-around">
+            <a class="logo justify-content-around" href="index.html">
                 <!-- logo-->
                 <div class="logo-lg">
               <span class="light-logo"
-              ><img src="../images/millenium.jpeg" alt="logo"
+              ><img alt="logo" src="../images/millenium.jpeg"
               /></span>
                     <span class="dark-logo"
-                    ><img src="../images/logo-light-text.png" alt="logo"
+                    ><img alt="logo" src="../images/logo-light-text.png"
                     /></span>
                 </div>
             </a>
@@ -57,16 +53,16 @@
             <!-- Sidebar toggle button-->
 
             <div class="input-group mb-3" style="width: 200px; margin-top: auto">
-                <input type="text" class="form-control" id="dateRangePicker"/>
+                <input class="form-control" id="dateRangePicker" type="text"/>
             </div>
 
             <div class="navbar-custom-menu r-side" style="display: flex">
                 <ul class="nav navbar-nav">
                     <li class="btn-group nav-item d-lg-inline-flex d-none">
                         <a
-                                href="#"
-                                data-provide="fullscreen"
                                 class="waves-effect waves-light nav-link rounded full-screen"
+                                data-provide="fullscreen"
+                                href="#"
                                 title="Full Screen"
                         >
                             <i class="ti-fullscreen"></i>
@@ -166,7 +162,7 @@
                                             <h5 class="mb-0" style="font-weight: bold">
                                                 اجمالى المدخلات
                                             </h5>
-                                            <h2 id="s1-ip-box" class="mb-0"></h2>
+                                            <h2 class="mb-0" id="s1-ip-box"></h2>
                                         </div>
                                     </div>
                                 </div>
@@ -181,8 +177,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="s1-accepted-ip-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-accepted-ip-box"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -196,8 +192,8 @@
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
-                                                <h2 id="s1-rejected-ip-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-rejected-ip-box"></h2>
                                             </div>
                                         </div>
                                     </div>
@@ -248,7 +244,7 @@
                     <!--taht el tashgheel-->
 
                     <div class="col-xl-4 col-md-4 col-12">
-                        <div id="popupContainerOperations" class="popup">-->
+                        <div class="popup" id="popupContainerOperations">-->
                             <div class="popup-content-operations">
                                                                     <span class="close"
                                                                           id="closeOperationsPopupBtn">&times;</span>
@@ -292,8 +288,8 @@
                                                 مرفوضات</h5>
                                             <div style="display: flex;justify-content: space-between;align-items: center;">
                                                 <span id="marfoodat-percentage" style="font-size: medium"></span>
-                                                <span id="marfoodat-operation-weight"
-                                                      class="mb-0 fs-4 d-flex justify-content-center"></span>
+                                                <span class="mb-0 fs-4 d-flex justify-content-center"
+                                                      id="marfoodat-operation-weight"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -307,8 +303,8 @@
                                                 مفروزات</h5>
                                             <div style="display: flex;justify-content: space-between;align-items: center;">
                                                 <span id="mafroozat-percentage"></span>
-                                                <span id="mafroozat-operation-weight" style="font-size: medium"
-                                                      class="mb-0 fs-4 d-flex justify-content-center"></span>
+                                                <span class="mb-0 fs-4 d-flex justify-content-center" id="mafroozat-operation-weight"
+                                                      style="font-size: medium"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -324,8 +320,8 @@
                                                 اسمدة عضوية</h5>
                                             <div style="display: flex;justify-content: space-between;align-items: center;">
                                                 <span id="asmeda-percentage" style="font-size: medium"></span>
-                                                <span id="asmeda-operation-weight"
-                                                      class="mb-0 fs-4 d-flex justify-content-center"></span>
+                                                <span class="mb-0 fs-4 d-flex justify-content-center"
+                                                      id="asmeda-operation-weight"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -339,8 +335,8 @@
                                                 وقود بديل</h5>
                                             <div style="display: flex;justify-content: space-between;align-items: center;">
                                                 <span id="waqood-percentage" style="font-size: medium"></span>
-                                                <span id="waqood-operation-weight"
-                                                      class="mb-0 fs-4 d-flex justify-content-center"></span>
+                                                <span class="mb-0 fs-4 d-flex justify-content-center"
+                                                      id="waqood-operation-weight"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -418,7 +414,7 @@
                                             <h5 class="mb-0" style="font-weight: bold">
                                                 اجمالى المخرجات
                                             </h5>
-                                            <h2 id="s1-op-box" class="mb-0"></h2>
+                                            <h2 class="mb-0" id="s1-op-box"></h2>
                                         </div>
                                         <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                     </div>
@@ -436,8 +432,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مرفوضات
                                                 </h5>
-                                                <h2 id="s1-marfoodat-op-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-marfoodat-op-box"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -454,8 +450,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     مفروزات
                                                 </h5>
-                                                <h2 id="s1-mafroozat-op-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-mafroozat-op-box"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -474,8 +470,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     اسمدة عضوية
                                                 </h5>
-                                                <h2 id="s1-asmeda-op-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-asmeda-op-box"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -492,8 +488,8 @@
                                                 <h5 class="mb-0" style="font-size: medium">
                                                     وقود بديل
                                                 </h5>
-                                                <h2 id="s1-waqood-op-box"
-                                                    class="mb-0 fs-4 d-flex justify-content-center"></h2>
+                                                <h2 class="mb-0 fs-4 d-flex justify-content-center"
+                                                    id="s1-waqood-op-box"></h2>
                                             </div>
                                             <!--                                    <img src="../images/gher_ma2bool.png" alt="" style="height: 62px">-->
                                         </div>
@@ -522,16 +518,8 @@
 
                     <div class="col-xl-8 col-8">
                         <div class="box">
-                            <div>
-                                <select
-                                        id="ip-dateRangeDropdown-s1"
-                                        onchange="updateInputGraph_s1(false)"
-                                >
-                                    <!--                                    <option value="" disabled selected>المدة</option>-->
-                                    <option value="last7days">اسبوع</option>
-                                    <option value="last14days">اسبوعين</option>
-                                    <option value="lastMonth">الشهر الماضى</option>
-                                </select>
+                            <div class="input-group mb-3" style="width: 200px; margin-top: auto">
+                                <input class="form-control" id="ipGraphDateRangePicker" type="text"/>
                             </div>
 
                             <div>
@@ -544,8 +532,8 @@
                             <div>
                                 <select
                                         id="ip-villageDropdown-s1"
-                                        style="display: none"
                                         onchange="updateInputGraph_s1(true)"
+                                        style="display: none"
                                 ></select>
                             </div>
                             <div class="box-header with-border">
@@ -574,18 +562,11 @@
 
                     <div class="col-xl-8 col-12">
                         <div class="box">
-                            <div>
-                                <select
-                                        id="op-dateRangeDropdown-s1"
-                                        onchange="updateOutputGraph_s1()">
-                                    <option value="last7days">اسبوع</option>
-                                    <option value="last14days">اسبوعين</option>
-                                    <option value="lastMonth">الشهر الماضى</option>
-                                    <!--                                    <option value="lastYear">Last Year</option>-->
-                                </select>
+                            <div class="input-group mb-3" style="width: 200px; margin-top: auto">
+                                <input class="form-control" id="opGraphDateRangePicker" type="text"/>
                             </div>
                             <div class="box-header">
-                                <h4 class="box-title">المخرجات (طن)</h4>
+                                <h4 class="box-title" style="margin-top: 15px;">المخرجات (طن)</h4>
                             </div>
                             <div class="box-body">
                                 <canvas id="s1-out-grph"></canvas>
@@ -595,13 +576,13 @@
                 </div>
 
                 <div class="input-group mb-3" style="width: 200px; margin-top: auto">
-                    <input type="text" class="form-control" id="datatableDateRangePicker"/>
+                    <input class="form-control" id="datatableDateRangePicker" type="text"/>
                 </div>
 
                 <div
                         class="input-group mb-3"
-                        style="display: none; position: absolute; right: 70%;"
                         id="datatableExportGroup"
+                        style="display: none; position: absolute; right: 70%;"
                 >
                     <button id="datatableExport"
                             onclick="exportToExcel()">
@@ -610,7 +591,7 @@
                     </button>
                 </div>
 
-                <table id="site1_table" class="table table-striped table-bordered">
+                <table class="table table-striped table-bordered" id="site1_table">
                     <thead>
                     <tr>
                         <th class="searchable-column">رقم التذكرة</th>
@@ -644,13 +625,13 @@
             window.location.href = "login.html";
         }
     });
+
 </script>
 
 <script src="js/vendors.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
-<script src="../assets/vendor_components/jquery.peity/jquery.peity.js"></script>
 <script src="../assets/vendor_components/c3/d3.min.js"></script>
 <script src="../assets/vendor_components/c3/c3.min.js"></script>
 
@@ -660,11 +641,7 @@
 <script src="../assets/vendor_components/moment/moment.js"></script>
 <script src="js/site1.js"></script>
 
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/ar.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/en-gb.js"></script>-->
 <script src="../assets/vendor_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-
-<script src="js/jquery-ui.js"></script>
 
 <script src="../assets/vendor_components/datatable/datatables.js"></script>
 </body>
