--- a/main/site3.html
+++ b/main/site3.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <link rel="icon" href="../images/favicon.ico"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="" name="description"/>
+    <meta content="" name="author"/>
+    <link href="../images/favicon.ico" rel="icon"/>
 
     <title>المدفن</title>
 
     <!-- Vendors Style-->
-    <link rel="stylesheet" href="css/vendors_css.css"/>
+    <link href="css/vendors_css.css" rel="stylesheet"/>
 
     <!-- Style-->
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/skin_color.css"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/skin_color.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="css/jquery-ui.css"/>
-
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">-->
-    <!--    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css">-->
-    <!--    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>-->
+    <link href="css/jquery-ui.css" rel="stylesheet"/>
 </head>
 <!---->
 <body class="hold-transition light-skin sidebar-mini theme-primary fixed rtl">
@@ -31,22 +27,22 @@
     <header class="main-header">
         <div class="d-flex align-items-center logo-box justify-content-start">
             <a
-                    href="#"
                     class="waves-effect waves-light nav-link rounded d-none d-md-inline-block mx-10 push-btn"
                     data-toggle="push-menu"
+                    href="#"
                     role="button"
             >
                 <i class="ti-menu"></i>
             </a>
             <!-- Logo -->
-            <a href="index.html" class="logo justify-content-around">
+            <a class="logo justify-content-around" href="index.html">
                 <!-- logo-->
                 <div class="logo-lg">
               <span class="light-logo"
-              ><img src="../images/millenium.jpeg" alt="logo"
+              ><img alt="logo" src="../images/millenium.jpeg"
               /></span>
                     <span class="dark-logo"
-                    ><img src="../images/logo-light-text.png" alt="logo"
+                    ><img alt="logo" src="../images/logo-light-text.png"
                     /></span>
                 </div>
             </a>
@@ -56,16 +52,16 @@
             <!-- Sidebar toggle button-->
 
             <div class="input-group mb-3" style="width: 200px; margin-top: auto">
-                <input type="text" class="form-control" id="dateRangePicker"/>
+                <input class="form-control" id="dateRangePicker" type="text"/>
             </div>
 
             <div class="navbar-custom-menu r-side" style="display: flex">
                 <ul class="nav navbar-nav">
                     <li class="btn-group nav-item d-lg-inline-flex d-none">
                         <a
-                                href="#"
-                                data-provide="fullscreen"
                                 class="waves-effect waves-light nav-link rounded full-screen"
+                                data-provide="fullscreen"
+                                href="#"
                                 title="Full Screen"
                         >
                             <i class="ti-fullscreen"></i>
@@ -316,13 +312,13 @@
                 </div>
 
                 <div class="input-group mb-3" style="width: 200px; margin-top: auto">
-                    <input type="text" class="form-control" id="datatableDateRangePicker"/>
+                    <input class="form-control" id="datatableDateRangePicker" type="text"/>
                 </div>
 
                 <div
                         class="input-group mb-3"
-                        style="display: none; position: absolute; right: 70%;"
                         id="datatableExportGroup"
+                        style="display: none; position: absolute; right: 70%;"
                 >
                     <button id="datatableExport"
                             onclick="exportToExcel()">
@@ -331,12 +327,12 @@
                     </button>
                 </div>
 
-                <table id="site3_table" class="table table-striped table-bordered">
+                <table class="table table-striped table-bordered" id="site3_table">
                     <thead>
                     <tr>
                         <th class="searchable-column">رقم التذكرة</th>
                         <th class="searchable-column">العميل</th>
-<!--                        <th class="searchable-column">الوحدة المحلية</th>-->
+                        <!--                        <th class="searchable-column">الوحدة المحلية</th>-->
                         <th class="searchable-column">نوع الشحنة</th>
                         <!--                        <th class="searchable-column">الصنف</th>-->
                         <!--                        <th class="searchable-column">المحافظة</th>-->
@@ -372,43 +368,17 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
-<script src="../assets/vendor_components/jquery.peity/jquery.peity.js"></script>
 <script src="../assets/vendor_components/c3/d3.min.js"></script>
 <script src="../assets/vendor_components/c3/c3.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
-<!--<script src="../assets/vendor_components/d3/d3.min.js"></script>-->
-<!--<script src="../assets/vendor_components/d3/d3_tooltip.js"></script>-->
 
-<!-- Florence Admin App -->
 <script src="js/template.js"></script>
-<!--<script src="js/pages/dashboard.js"></script>-->
-
-<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment/min/moment.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>-->
 <script src="../assets/vendor_components/moment/moment.js"></script>
 <script src="js/site3.js"></script>
 
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/ar.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/en-gb.js"></script>-->
-<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>-->
 <script src="../assets/vendor_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-<!--<script src="../assets/vendor_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>-->
 
-<script src="js/jquery-ui.js"></script>
-
-<!--<script src="js/pages/chart-widgets.js"></script>-->
-
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>-->
-<!--<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>-->
 <script src="../assets/vendor_components/datatable/datatables.js"></script>
-
-<!--<script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>-->
-
-<!--<script src="js/pages/chartjs-int.js"></script>-->
-
-<!--<script src="js/pages/dashboard2.js"></script>-->
-<!--<script src="../assets/vendor_components/apexcharts-bundle/dist/apexcharts.js"></script>-->
 </body>
 </html>
