Edit labels and percentage equation in home page

--- a/main/index.html
+++ b/main/index.html
@@ -208,7 +208,7 @@
                                         >
                                             <div style="color: #003f5c; margin: auto">
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
-                                                    نسبة المخلفات الصالحة للمعالجة
+                                                    المخلفات الصالحة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
                                                     id="accepted_per"></h2>
@@ -224,8 +224,8 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #003f5c; margin: auto">
-                                                <h5 class="mb-0" style="font-weight: bold; font-size: small">
-                                                    نسبة المرفوضات من المخلفات الصالحة للمعالجة
+                                                <h5 class="mb-0" style="text-align: center;font-weight: bold; font-size: small">
+                                                    المرفوضات من المخلفات الصالحة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
                                                     id="rejected_per"></h2>
@@ -263,7 +263,7 @@
                         </div>
                         <div class="col-xl-12 col-md-12 col-12">
                             <div class="box pull-up">
-                                <div class="box-body">
+                                <div class="box-body" style="height: 109px;display: flex;justify-content: center;">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div style="color: #003f5c; margin: auto">
                                             <h3 class="mb-0" style="font-weight: bold;">
@@ -283,7 +283,7 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #10d6b4; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
+                                                <h5 class="mb-0" style="text-align: center;font-size: medium">
                                                     مرفوضات
                                                 </h5>
                                                 <h2 id="marfoodat-operation-weight"
@@ -301,7 +301,7 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #85a6e9; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
+                                                <h5 class="mb-0" style="text-align: center;font-size: medium">
                                                     مفروزات
                                                 </h5>
                                                 <h2 id="mafroozat-operation-weight"
@@ -322,7 +322,7 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #2da075; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
+                                                <h5 class="mb-0" style="text-align: center;font-size: medium">
                                                     اسمدة عضوية
                                                 </h5>
                                                 <h2 id="asmeda-operation-weight"
@@ -340,7 +340,7 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #1427c9; margin: auto">
-                                                <h5 class="mb-0" style="font-size: medium">
+                                                <h5 class="mb-0" style="text-align: center;font-size: medium">
                                                     وقود بديل
                                                 </h5>
                                                 <h2 id="waqood-operation-weight"
