Apply labels change and percentage equation in 5 sites

--- a/main/index.html
+++ b/main/index.html
@@ -171,7 +171,7 @@
                                     <div class="box-body">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div style="color: #ffa014; margin: auto">
-                                                <h5 class="mb-0" style="font-size: small">
+                                                <h5 class="mb-0" style="text-align: center; font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
                                                 <h2 id="tot-accepted-ip-box"
@@ -186,7 +186,7 @@
                                     <div class="box-body">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div style="color: #d81415; margin: auto">
-                                                <h5 class="mb-0" style="font-size: small">
+                                                <h5 class="mb-0" style="text-align: center; font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
                                                 <h2 id="tot-rejected-ip-box"
