--- a/main/site3.html
+++ b/main/site3.html
@@ -157,7 +157,7 @@
                     <!--                            <h1 class="fw-500 text-dark" id="s3-rejected-per"></h1>-->
                     <!--                            <small class="fw-200 fs-2" id="s3-accepted"></small>-->
                     <!--                            <p class="fs-4">-->
-                    <!--                                نسبة المرفوضات من المخلفات الصالحة للمعالجة-->
+                    <!--                                المرفوضات من المخلفات الصالحة-->
                     <!--                            </p>-->
                     <!--                            <div class="progress progress-xs mt-10 mb-0 max-w-p90">-->
                     <!--                                <div-->
@@ -176,7 +176,7 @@
                     <!--                    <div class="col-xl-6 col-md-12 col-12">-->
                     <!--                        <div class="box p-4" style="color: #003f5c">-->
                     <!--                            <h1 class="fw-500" id="s3-accepted-per"></h1>-->
-                    <!--                            <p class="fs-4">نسبة المخلفات الصالحة للمعالجة</p>-->
+                    <!--                            <p class="fs-4">المخلفات الصالحة</p>-->
                     <!--                            <div class="progress progress-xs mt-10 mb-0 max-w-p90">-->
                     <!--                                <div-->
                     <!--                                        class="progress-bar"-->
