--- a/main/site4.html
+++ b/main/site4.html
@@ -178,7 +178,7 @@
                                     <div class="box-body">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div style="color: #ffa014; margin: auto">
-                                                <h5 class="mb-0" style="font-size: small">
+                                                <h5 class="mb-0" style="text-align: center; font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
@@ -193,7 +193,7 @@
                                     <div class="box-body">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div style="color: #d81415; margin: auto">
-                                                <h5 class="mb-0" style="font-size: small">
+                                                <h5 class="mb-0" style="text-align: center; font-size: small">
                                                     مخلفات لا تصلح للمعالجة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
@@ -214,7 +214,7 @@
                                         >
                                             <div style="color: #003f5c; margin: auto">
                                                 <h5 class="mb-0" style="font-weight: bold; font-size: small">
-                                                    نسبة المخلفات الصالحة للمعالجة
+                                                    المخلفات الصالحة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
                                                     id="accepted_per"></h2>
@@ -231,8 +231,8 @@
                                                 class="d-flex align-items-center justify-content-between"
                                         >
                                             <div style="color: #003f5c; margin: auto">
-                                                <h5 class="mb-0" style="font-weight: bold; font-size: small">
-                                                    نسبة المرفوضات من المخلفات الصالحة للمعالجة
+                                                <h5 class="mb-0" style="text-align: center;font-weight: bold; font-size: small">
+                                                    المرفوضات من المخلفات الصالحة
                                                 </h5>
                                                 <h2 class="mb-0 fs-4 d-flex justify-content-center"
                                                     id="rejected_per"></h2>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="col-xl-12 col-md-12 col-12">
                             <div class="box pull-up">
-                                <div class="box-body">
+                                <div class="box-body" style="height: 109px;display: flex;justify-content: center;">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div style="color: #003f5c; margin: auto">
                                             <h3 style="font-weight: bold;margin-bottom: 10px;">
